k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekl-frontend
spec:
  selector:
    app: ekl-frontend
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
