k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ekl-frontend
spec:
  gateways:
    - ekl-istio-system/ekl-istio-default-gateway
